--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ReactNativeLogin</string>
+    <string name="facebook_app_id">1318762144989662</string> <string name="fb_login_protocol_scheme">fb1318762144989662</string>
 </resources>
